# fonts-of-power

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  open rules.bat
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  content_idea.md  design_issue.md  docs_improvement.md  missing_feature.md  prototype.md  usability.md
.github/PULL_REQUEST_TEMPLATE/: content.md  rfc.md
.github/linters/: .markdown-link.yml
.github/workflows/: ci.yml
docs/: README.md  _sidebar.md  book.toml  index.html  styles.css
docs/character-options/: character-creation.md
docs/character-options/species/: automaton.md  awakened.md  crystalline.md
docs/features/: README.md  headings.md  markdown.md  other.md
docs/meta/autofocus/: autofocus.js
docs/meta/dark/: darkMode.css  darkMode.js
docs/meta/fonts/: fonts.css
docs/src/: README.md  SUMMARY.md
docs/src/character-options/: README.md  character-creation.md
docs/src/hacking/: combat-power-budgets.md  design-principles.md
docs/src/intro/: collaborative-rulekeeping.md
docs/src/rfc/: 000-rfc-template.md  001-customization-overhaul.md
docs/src/rules/: README.md  attributes.md  building-blocks.md  collaborative-rulekeeping.md  downtime-activities.md  resources-and-resting.md
rulebook/src/: README.md  SUMMARY.md
rules/: book.toml
rules/src/: SUMMARY.md
src/: class.rs  damage.rs  main.rs  skills.rs  stats.rs
src/character_options/: classes.rs  mod.rs  species.rs
src/combat/: actions.rs  attack.rs  conditions.rs  core_actions.rs  damage.rs  forced_movement.rs  mod.rs  movement.rs  tiles.rs  time.rs
src/core/: affixes.rs  dice.rs  entity_clone.rs  mod.rs  skills.rs  stats.rs
src/exploration/: downtime.rs  inventory.rs  mod.rs
src/tests/: basic_integration.rs  mod.rs
(+569 files in other folders)
