[package]
name = "fop-game"
version = "0.1.0"
authors = ["Leafwing Studios"]
homepage = "https://fontsofpower.com"
repository = "https://github.com/leafwing-studios/fop-game"
license = "Proprietary"
edition = "2021"
categories = ["games"]
keywords = ["bevy", "rpg"]

[dependencies]
bevy = "0.6"
rand = "0.8.3"
derive_more = "0.99.11"
num-rational = "0.3"
bounded-integer = {version = "0.5", feature = "types"}

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false