[package]
name = "fop-game"
version = "0.1.0"
authors = ["Leafwing Studios"]
homepage = "https://fontsofpower.com"
repository = "https://github.com/leafwing-studios/fop-game"
license = "Proprietary"
edition = "2021"
categories = ["games"]
keywords = ["bevy", "rpg"]

[dependencies]
bevy = "0.7"
bounded-integer = {version = "0.5", features = ["types"]}
derive_more = "0.99.11"
fastrand = "1.7.0"
num-rational = "0.3"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]
